--- a/core/templates/403.html
+++ b/core/templates/403.html
@@ -1,4 +1,5 @@
 {% extends "web/base.html" %}
+{% load static %}
 {% block title %}Доступ запрещён{% endblock %}
 {% block content %}
 <div class="text-center mt-5">
