--- a/core/templates/web/add_fuel.html
+++ b/core/templates/web/add_fuel.html
@@ -1,4 +1,5 @@
 {% extends "web/base.html" %}
+{% load static %}
 {% block title %}Добавить заправку{% endblock %}
 {% block content %}
 <h3 class="mb-4">Добавить заправку</h3>
