--- a/core/templates/web/reports.html
+++ b/core/templates/web/reports.html
@@ -1,4 +1,5 @@
 {% extends "web/base.html" %}
+{% load static %}
 {% block title %}Отчёты{% endblock %}
 {% block content %}
 <h3 class="mb-4">📋 Отчёты по заправкам</h3>
